--- a/index.html
+++ b/index.html
@@ -96,50 +96,50 @@
             <div class="resume_container">
                 <div>
                     <div>
-                        <h4>My Education</h4>
+                        <h4 class="resu">My Education</h4>
                     </div>
-                    <div>
-                        <h4>Master in Computer Engineering</h4>
+                    <div class="resume_box">
+                        <h4 class="resu-sub">Master in Computer Engineering</h4>
                         <h5>Harvard University / 2015 - 2017</h5>
                         <p>List skill/technologies here. You can change the icon above
                             to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
                         </p>
                     </div>
-                    <div>
-                        <h4>Master in Computer Engineering</h4>
+                    <div class="resume_box">
+                        <h4 class="resu-sub">Master in Computer Engineering</h4>
                         <h5>Harvard University / 2015 - 2017</h5>
                         <p>List skill/technologies here. You can change the icon above
                             to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
                         </p>
                     </div>
-                    <div>
-                        <h4>Master in Computer Engineering</h4>
+                    <div class="resume_box">
+                        <h4 class="resu-sub">Master in Computer Engineering</h4>
                         <h5>Harvard University / 2015 - 2017</h5>
                         <p>List skill/technologies here. You can change the icon above
                             to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
                         </p>
                     </div>
                 </div>
-                <div>
+                <div class="resume_box">
                     <div>
-                        <h4>My Experience</h4>
+                        <h4 class="resu">My Experience</h4>
                     </div>
                     <div>
-                        <h4>Master in Computer Engineering</h4>
+                        <h4 class="resu-sub">Master in Computer Engineering</h4>
                         <h5>Harvard University / 2015 - 2017</h5>
                         <p>List skill/technologies here. You can change the icon above
                             to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
                         </p>
                     </div>
-                    <div>
-                        <h4>Master in Computer Engineering</h4>
+                    <div class="resume_box">
+                        <h4 class="resu-sub">Master in Computer Engineering</h4>
                         <h5>Harvard University / 2015 - 2017</h5>
                         <p>List skill/technologies here. You can change the icon above
                             to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
                         </p>
                     </div>
-                    <div>
-                        <h4>Master in Computer Engineering</h4>
+                    <div class="resume_box">
+                        <h4 class="resu-sub">Master in Computer Engineering</h4>
                         <h5>Harvard University / 2015 - 2017</h5>
                         <p>List skill/technologies here. You can change the icon above
                             to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
