--- a/index.html
+++ b/index.html
@@ -59,96 +59,48 @@
                 </div>
             </div>
         </section>
-        <section class="what_i_do">
-            <div class="section-head">
-                <h3 class="section-title">What I Do</h3>
-                <p class="section-description">I have more than 10 years experience building software for clients all
-                    over the world. Below is a quick overview of my main technical skill sets and technologies i use.
-                    Want to find out more about my experience? Check out my online resume and project portfolio.</p>
-            </div>
-            <div class="what_i_do_container">
-                <div class="what_i_do_info">
-                    <h5>Vanilla JavaScript</h5>
-                    <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5
-                        free icons available. Aenean commodo ligula eget dolor.</p>
+        <!-- what i do section -->
+        <section>
+            <h3 class="what_i_do">What I Do</h3>
+            <p class="what_i_do-description">Shot what able cold new see hold.Friendly as an betrayed formerly he.
+                Morning
+                because as to society behaved moments.</p>
+            <div class="skills_container">
+                <div class="skills">
+                    <img src="images/icons/js.png" alt="">
+                    <p class="skills_title">Vanilla JavaScript</p>
+                    <p class="skills_description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat
+                        quisquam ducimus delectus adipisci autem neque?</p>
                 </div>
-                <div class="what_i_do_info">
-                    <h5>React</h5>
-                    <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5
-                        free icons available. Aenean commodo ligula eget dolor.</p>
+                <div class="skills">
+                    <img src="images/icons/react.png" alt="">
+                    <p class="skills_title">React</p>
+                    <p class="skills_description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat
+                        quisquam ducimus delectus adipisci autem neque?</p>
                 </div>
-                <div class="what_i_do_info">
-                    <h5>Node.js</h5>
-                    <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5
-                        free icons available. Aenean commodo ligula eget dolor.</p>
+                <div class="skills">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <p class="skills_title">Node.js</p>
+                    <p class="skills_description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat
+                        quisquam ducimus delectus adipisci autem neque?</p>
                 </div>
-                <div class="what_i_do_info">
-                    <h5>MongoDB</h5>
-                    <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5
-                        free icons available. Aenean commodo ligula eget dolor.</p>
-                </div>
-            </div>
-        </section>
-        <section class="resume">
-            <div class="section-head">
-                <h3 class="section-title">A summary of My Resume</h3>
-            </div>
-            <div class="resume_container">
-                <div>
-                    <div>
-                        <h4 class="resu">My Education</h4>
-                    </div>
-                    <div class="resume_box">
-                        <h4 class="resu-sub">Master in Computer Engineering</h4>
-                        <h5>Harvard University / 2015 - 2017</h5>
-                        <p>List skill/technologies here. You can change the icon above
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
-                        </p>
-                    </div>
-                    <div class="resume_box">
-                        <h4 class="resu-sub">Master in Computer Engineering</h4>
-                        <h5>Harvard University / 2015 - 2017</h5>
-                        <p>List skill/technologies here. You can change the icon above
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
-                        </p>
-                    </div>
-                    <div class="resume_box">
-                        <h4 class="resu-sub">Master in Computer Engineering</h4>
-                        <h5>Harvard University / 2015 - 2017</h5>
-                        <p>List skill/technologies here. You can change the icon above
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
-                        </p>
-                    </div>
-                </div>
-                <div class="resume_box">
-                    <div>
-                        <h4 class="resu">My Experience</h4>
-                    </div>
-                    <div>
-                        <h4 class="resu-sub">Master in Computer Engineering</h4>
-                        <h5>Harvard University / 2015 - 2017</h5>
-                        <p>List skill/technologies here. You can change the icon above
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
-                        </p>
-                    </div>
-                    <div class="resume_box">
-                        <h4 class="resu-sub">Master in Computer Engineering</h4>
-                        <h5>Harvard University / 2015 - 2017</h5>
-                        <p>List skill/technologies here. You can change the icon above
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
-                        </p>
-                    </div>
-                    <div class="resume_box">
-                        <h4 class="resu-sub">Master in Computer Engineering</h4>
-                        <h5>Harvard University / 2015 - 2017</h5>
-                        <p>List skill/technologies here. You can change the icon above
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
-                        </p>
-                    </div>
+                <div class="skills">
+                    <img src="images/icons/mongo.png" alt="">
+                    <p class="skills_title">MongoDB</p>
+                    <p class="skills_description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat
+                        quisquam ducimus delectus adipisci autem neque?</p>
                 </div>
             </div>
         </section>
 
+        <section class="resume">
+            <h3 class="section-title">A summary of My Resume</h3>
+            <div class="resume_content_container">
+                <div>
+                    
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
