--- a/index.html
+++ b/index.html
@@ -97,10 +97,73 @@
             <h3 class="section-title">A summary of My Resume</h3>
             <div class="resume_content_container">
                 <div>
-                    
+                    <h3 class="resume_title">My Education</h3>
+                    <div class="resume_title_items">
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="item-sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume_title_items">
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="item-sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume_title_items">
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="item-sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+                <div>
+                    <div class="resume_content_container">
+                        <div>
+                            <h3 class="resume_title">My Experience</h3>
+                            <div class="resume_title_items">
+                                <h4 class="title">Sr. Font End Developer</h4>
+                                <h5 class="item-sub-title">Apple Inc / 2020 - Current</h5>
+                                <p class="description">List skill/technologies here. You can change the icon above 
+                                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                            </div>
+                            <hr>
+                            <div class="resume_title_items">
+                                <h4 class="title">Jr. Font End Developer</h4>
+                                <h5 class="item-sub-title">Dribbble Inc / 2018 - 2022</h5>
+                                <p class="description">List skill/technologies here. You can change the icon above 
+                                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                            </div>
+                            <hr>
+                            <div class="resume_title_items">
+                                <h4 class="title">HTML Developer</h4>
+                                <h5 class="item-sub-title">Adobe Inc / 2017 - 2018</h5>
+                                <p class="description">List skill/technologies here. You can change the icon above 
+                                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                            </div>
+                        </div>
+                </div>
+                <div class="resume_button">
+                    <button class="btn-primary">Download</button>
                 </div>
             </div>
         </section>
+        <footer>
+        <div class="footer_container">
+            <div>
+                <h5 class="footer_title">Lets Connect</h5>
+                <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            </div>
+            <div>
+                <h5 class="footer_title">Let's Message me</h5>
+                <form action="">
+                    <input class="from-text" type="text" placeholder="Your Name">
+                </form>
+            </div>
+        </div>
+        </footer>
     </main>
 </body>
 
