--- a/index.html
+++ b/index.html
@@ -146,26 +146,29 @@
                         </div>
                 </div>
             </div>
-
-        </section>
-        <div class="resume_button">
-            <button class="btn-primary">Download</button>
-        </div>
-        <footer>
-        <div class="footer_container">
-            <div>
-                <h5 class="footer_title">Lets Connect</h5>
-                <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
-            </div>
-            <div>
-                <h5 class="footer_title">Let's Message me</h5>
-                <form action="">
-                    <input class="from-text" type="text" placeholder="Your Name">
-                </form>
-            </div>
-        </div>
-        </footer>
     </main>
+</section>
+<div class="resume_button">
+    <button class="btn-primary">Download</button>
+</div>
+<section class="footer_section">
+    <div class="connect_side">
+        <h3>Let's Connect</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi assumenda molestiae obcaecati.</p>
+        <img src="images/icons/facebook.png" alt="">
+        <img src="images/icons/insta.png" alt="">
+        <img src="images/icons/twitter.png" alt="">
+    </div>
+    <div class="Message_side">
+        <h3>Let's Message Me</h3>
+        <form action="">
+            <input class="input" type="text" placeholder="Your Name">
+            <input class="input" type="email" placeholder="Your Email">
+            <textarea class="input_message" name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+            <button class="btn-primary" type="submit">Submit</button>
+        </form>
+    </div>
+</section> 
 </body>
 
 </html>
