--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 <body>
     <header class="header">
+        <div class="developer_img"><img src="images/developer.png" alt=""></div>
         <nav>
             <h2 class="nav-title">Dro<span class="main-color">b</span>o</h2>
             <ul>
@@ -23,6 +24,7 @@
                 <li><button class="btn-primary">Hire Me</button></li>
             </ul>
         </nav>
+
         <div class="Banner">
             <div>
                 <h3 class="sub-title">Hello! I am</h3>
@@ -101,22 +103,25 @@
                     <div class="resume_title_items">
                         <h4 class="title">Master in Computer Engineering</h4>
                         <h5 class="item-sub-title">Harvard University / 2015 - 2017</h5>
-                        <p class="description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <p class="description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
                     </div>
                     <hr>
                     <div class="resume_title_items">
                         <h4 class="title">Master in Computer Engineering</h4>
                         <h5 class="item-sub-title">Harvard University / 2015 - 2017</h5>
-                        <p class="description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <p class="description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
                     </div>
                     <hr>
                     <div class="resume_title_items">
                         <h4 class="title">Master in Computer Engineering</h4>
                         <h5 class="item-sub-title">Harvard University / 2015 - 2017</h5>
-                        <p class="description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <p class="description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
                     </div>
                 </div>
                 <div>
@@ -126,49 +131,55 @@
                             <div class="resume_title_items">
                                 <h4 class="title">Sr. Font End Developer</h4>
                                 <h5 class="item-sub-title">Apple Inc / 2020 - Current</h5>
-                                <p class="description">List skill/technologies here. You can change the icon above 
-                                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                                <p class="description">List skill/technologies here. You can change the icon above
+                                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget
+                                    dolor.</p>
                             </div>
                             <hr>
                             <div class="resume_title_items">
                                 <h4 class="title">Jr. Font End Developer</h4>
                                 <h5 class="item-sub-title">Dribbble Inc / 2018 - 2022</h5>
-                                <p class="description">List skill/technologies here. You can change the icon above 
-                                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                                <p class="description">List skill/technologies here. You can change the icon above
+                                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget
+                                    dolor.</p>
                             </div>
                             <hr>
                             <div class="resume_title_items">
                                 <h4 class="title">HTML Developer</h4>
                                 <h5 class="item-sub-title">Adobe Inc / 2017 - 2018</h5>
-                                <p class="description">List skill/technologies here. You can change the icon above 
-                                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                                <p class="description">List skill/technologies here. You can change the icon above
+                                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget
+                                    dolor.</p>
                             </div>
                         </div>
+                    </div>
                 </div>
-            </div>
     </main>
-</section>
-<div class="resume_button">
-    <button class="btn-primary">Download</button>
-</div>
-<section class="footer_section">
-    <div class="connect_side">
-        <h3>Let's Connect</h3>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi assumenda molestiae obcaecati.</p>
-        <img src="images/icons/facebook.png" alt="">
-        <img src="images/icons/insta.png" alt="">
-        <img src="images/icons/twitter.png" alt="">
+    </section>
+    <div class="resume_button">
+        <button class="btn-primary">Download</button>
     </div>
-    <div class="Message_side">
-        <h3>Let's Message Me</h3>
-        <form action="">
-            <input class="input" type="text" placeholder="Your Name">
-            <input class="input" type="email" placeholder="Your Email">
-            <textarea class="input_message" name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
-            <button class="btn-primary" type="submit">Submit</button>
-        </form>
-    </div>
-</section> 
+    <section class="footer_section">
+        <div class="footer_container">
+            <div class="connect_side">
+                <h3>Let's Connect</h3>
+                <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET,
+                    Monday through Friday.</p>
+                <img src="images/icons/facebook.png" alt="">
+                <img src="images/icons/insta.png" alt="">
+                <img src="images/icons/twitter.png" alt="">
+            </div>
+            <div class="Message_side">
+                <h3>Let's Message Me</h3>
+                <form action="">
+                    <input class="input" type="text" placeholder="Your Name">
+                    <input class="input" type="email" placeholder="Your Email">
+                    <textarea class="input_message" name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                    <button class="btn-primary" type="submit">Submit</button>
+                </form>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
